<resources>
    <string name="app_name">Meeting Room Booking System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user_colon">User:</string>
    <string name="password_colon">Password:</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_details">www.mrbsystem.com\n+91 0471 255678</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_room">Add Room</string>
    <string name="search_room">Search Room</string>
    <string name="logout">Logout</string>
    <string name="room_list">Room List</string>
    <string name="building_compulsory">Building*</string>
    <string name="floor_compulsory">Floor*</string>
    <string name="room_name_compulsory">Room Name*</string>
    <string name="capacity_compulsory">Capacity*</string>
    <string name="network">Network</string>
    <string name="facilities_provided">Facilities Provided</string>
    <string name="conf_phone">Conf Phone</string>
    <string name="projector">Projector</string>
    <string name="intenet">Intenet</string>
    <string name="internet">Internet</string>
    <string name="video">Video</string>
    <string name="ac">AC</string>
    <string name="room_id">Room Id:</string>
    <string name="building">Building:</string>
    <string name="floor">Floor:</string>
    <string name="room_name">Room Name:</string>
    <string name="capacity">Capacity</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
</resources>