<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.learn.az.roombooking.ui.dashboard.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardFragment">

        <ImageView
            android:id="@+id/dashboard_image"
            android:layout_width="112dp"
            android:layout_height="111dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/company_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/meeting_room"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/dashboard_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dashboard"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dashboard_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dashboard_image"
            app:layout_constraintTop_toTopOf="@+id/dashboard_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="164dp" />

        <Button
            android:id="@+id/add_room_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_room"
            android:onClick="@{ () -> viewModel.navigateToAddRoom() }"
            app:layout_constraintBottom_toTopOf="@+id/room_list_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/room_list_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/room_list"
            android:onClick="@{ () -> viewModel.navigateToRoomList() }"
            app:layout_constraintBottom_toTopOf="@+id/search_room_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_room_button" />

        <Button
            android:id="@+id/search_room_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search_room"
            android:onClick="@{ () -> viewModel.navigateToSearchRoom() }"
            app:layout_constraintBottom_toTopOf="@+id/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_list_button" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/logout"
            android:onClick="@{ ()->viewModel.navigateToLogin() }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_room_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
